# nepi_aif_yolov8

./: CMakeLists.txt  README.md  package.xml
api/: aif_yolov8_if.py
if/: aif_yolov8_if.py
launch/: yolov8_ros.launch
params/: aif_yolov8_params.yaml
scripts/: nepi_ai_yolov8_detection_node.py  nepi_ai_yolov8_detection_test.py
